--- a/src/home.html
+++ b/src/home.html
@@ -49,19 +49,29 @@
         <section class="relatos">
         <div class="container">
             <div class="relato1">
-                <img src="marinafilo.jpg" alt="marina e filo">
-                <p>Marina e Filó</p>
-                <span>"perdi a Filó no ano novo e encontrei ela oito dias depois de anúnciar aqui no sos."</span>
+                <img src="relato1.jpg" alt="marina e filo">
+                <p>MARINA E TOM</p>
+                <span>o tom se perdeu da mari no fim do ano e ela encontrou ele fazendo um post aqui no site! </span>
            </div>
            <div class="relato2">
-                <img src="luanromeu.jpg" alt="Luan e Romeu">
-                <p>Luan e Romeu</p>
-                <span>"econtrei Romeu entre os anúncios do sos pet e ele foi meu melhor presente."</span>
+                <img src="relato2.jpg" alt="Luan e Romeu">
+                <p>CAROL E ROMEU</p>
+                <span>a carol encontrou o romeu depois de se apaixonar vendo um post sobre a adoção dele aqui!</span>
            </div>
            <div class="relato3">
-                <img src="alanasimba.jpg" alt="Alana e Simba">
-                <p>Alana e Simba</p>
-                <span>"Simba desaparesceu e o encontramos graças a um anúncio feito por alguém no site."</span>
+                <img src="relato3.jpg" alt="Alana e Simba">
+                <p>TIAGO E SIMBA</p>
+                <span>tiago encontrou o simba depois de encontrar um post sobre o fugitivo aqui no sos!</span>
+           </div>
+           <div class="relato4">
+            <img src="relato4.jpg" alt="Luan e Romeu">
+            <p>FILIPE E CHICO</p>
+            <span>filipe, teve amor a primeira vista e adotou seu melhor amigo no sos pet!</span>
+            </div>
+            <div class="relato5">
+                <img src="relato5.jpg" alt="Luan e Romeu">
+                <p>JOANA E BERRY</p>
+                <span>a jo perdeu o berry mas o reencontrou atráves de um post feito por ela no site!</span>
            </div>
         </div>   
         </section>
@@ -70,6 +80,8 @@
             <h4 class="adocao-titulo">você também pode adotar um pet!</h4>
             <button class="adocao-botao">encontrar um pet para adoção</button>
         </section>
+
+    </main>
 
         <section class="footer">
             <div class="footer-contatos">
@@ -89,7 +101,7 @@
 
             <ul class="footer-lista">
                 <li>
-                    <p>Blog</p>
+                    <p>BLOG</p>
                 </li>
                 <li>
                     <a href="#" class="footer-link">sobre nós</a>
@@ -101,7 +113,7 @@
 
             <ul class="footer-lista">
                 <li>
-                    <p>Informações</p>
+                    <p>INFORMAÇÕES</p>
                 </li>
                 <li>
                     <a href="#" class="footer-link">termos de uso</a>
@@ -113,22 +125,15 @@
             
             <div id="footer-email">
                 <p>fale com a gente :) </p>
-                <span>nos envie um email para tirar suas dúvidas, estamos à disposição!</span>
-
-                <div id="input-group">
-                    <input type="email" id="email">
-                    <button>
-                        <i class="fa-regular fa-envelope" style="color: #ffffff;"></i>
-                    </button>
-                </div>
+                <button class="footer-botao">entra r em contato</button>
             </div>
+
         <div id="footer-copyright">
             &#169
             2023 all rights reserved
         </div>    
         </section>
 
-    </main>
 </body>
 
 </html>
